<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="demo1">Demo 1 - Simple Dialog</string>
    <string name="demo2">Demo 2 - Button Dialog</string>
    <string name="demo3">Demo 3 - Text Input Dialog</string>
    <string name="enter">Enter some number</string>
    <string name="exercise3">Exercise 3</string>
    <string name="demo4">Demo 4 - DatePicker Dialog</string>
    <string name="demo5">Demo 5 - Timepicker Demo</string>
</resources>